更新文档：5.3.2001-t44 1、修正开屏显示逻辑，优化调用步骤。 2、修复ByteDance的banner二次调用不显示问题。 3、修复GDT广告全屏视频，hasAd状态不正确，导致不能自动二次加载的问题。 4、其他一些优化调整。

--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -6,4 +6,5 @@
     <string name="main_bt_next_page">下一个页面</string>
     <string name="show_banner">显示Banner</string>
     <string name="hide_banner">隐藏Banner</string>
+    <string name="show_splash">显示开屏</string>
 </resources>
